style.css
body {
    font-family: "Poppins-light", sans-serif;
    font-weight: normal;
    font-style: light;

    margin: 50px;
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(248, 248, 248);
}

img {
    width: 220px;
    height: 220px;
    object-fit: cover;
    border-radius: 5%;
    border: solid black 3px;
}

.recipe-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
    gap: 10px;
}

.featured-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
    margin: 20px;
    margin-top: 0px;
    margin-bottom: 50px;
}


h1 {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

h2 {
    margin-bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    justify-content: center;
}

header {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

a {
    text-decoration: none;
    color: black;
    font-weight: 600;
    color: azure;
    padding-top: 10px;
    padding-bottom: 10px;
    border: solid black 3px;
    border-radius: 10px;
    background-color: rgb(0, 0, 0);
    width: 226px;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.coming {
    padding-top: 10px;
    padding-bottom: 10px;
    width: 226px;
    text-align: center;
    background-color: rgb(230, 224, 224);
    border-radius: 10px;
    margin-top: -1px;
    border: solid rgb(206, 206, 206) 1px;
}

.more {
    background-color: #57a857;
    border: #57a857;
}

